--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,14 @@
         font-family: "Poppins", sans-serif;
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
